<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.GameFragment"
        android:layout_above="@id/textView"
        android:id="@+id/rv"></androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:paddingBottom="16dp" />
</RelativeLayout>
