<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/messageTv"
        android:textSize="16sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="?attr/buttonBarStyle">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:id="@+id/btn"
            android:textColor="@color/black"
            app:strokeColor="@color/black"
            app:cornerRadius="8dp"
            android:text="OK"
            style="?attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:id="@+id/share"
            android:textColor="@color/black"
            app:strokeColor="@color/black"
            app:cornerRadius="8dp"
            android:text="SHARE"
            style="?attr/buttonBarButtonStyle" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>